implement JWT authentication system
Complete implementation of Section 3.1 backend JWT authentication with:

- JWT token provider service with secure HMAC-SHA256 token generation and 1-hour expiration
- Authentication service with user registration, login, and token refresh capabilities
- Authentication DTOs with comprehensive validation (LoginRequest, RegisterRequest, AuthResponse)
- Spring Security configuration with JWT filter chain, BCrypt password encoding, and CORS support
- JWT authentication filter and entry point for secure request processing
- REST API endpoints for /api/auth/register, /api/auth/login, /api/auth/validate, and /api/auth/refresh
- Comprehensive error handling with custom exceptions and global exception handler
- Neo4j User entity integration with UserDetails implementation
- Production-ready security configuration with proper headers and authentication flows

All authentication components follow security best practices with proper token validation,
password hashing, and stateless session management for the single-user PKM system.